# libmetal

./: .readthedocs.yaml  .travis.yml  CMakeLists.txt  MAINTAINERS.md  README.md
.github/actions/build_ci/: README.md  entrypoint.sh
.github/workflows/: compliance.yml  continuous-integration.yml
cmake/: depends.cmake  options.cmake  syscheck.cmake
doc/: CMakeLists.txt  Doxyfile.in
lib/: CMakeLists.txt  alloc.h  assert.h  atomic.h  cache.h  compiler.h  condition.h  device.c  device.h  domain.h  errno.h  io.c  io.h  irq.h  list.h  log.c  log.h  mutex.h  shmem.c  shmem.h  sleep.h  softirq.c  sys.h  time.h  utilities.h
lib/compiler/gcc/: compiler.h
lib/generic/: mutex.h  shmem.c
lib/linux/: CMakeLists.txt  device.c  domain.c  init.c  sys.h  utilities.c
lib/processor/arm/: CMakeLists.txt
lib/system/freertos/: CMakeLists.txt  assert.h  cache.h  device.c  init.c  io.c  irq.c  irq.h  mutex.h  sleep.c  sleep.h  sys.h  time.c
lib/system/freertos/template/: sys.c  sys.h
lib/system/freertos/xlnx/: sys.c
lib/system/freertos/xlnx_common/: CMakeLists.txt
lib/system/freertos/zynq7/: sys.c  sys.h
lib/system/freertos/zynqmp_a53/: CMakeLists.txt  sys.c
lib/system/freertos/zynqmp_r5/: sys.c  sys.h
lib/system/generic/: CMakeLists.txt  alloc.c  alloc.h  assert.h  cache.h  condition.c  condition.h  device.c  domain.c  domain.h  init.c  io.c  irq.c  irq.h  mutex.h  sleep.c  sleep.h  sys.h  time.c
lib/system/linux/: CMakeLists.txt  alloc.c  alloc.h  assert.h  cache.h  condition.c  condition.h  device.c  (+10 more)
scripts/: checkpatch.pl
scripts/ci/: check_compliance.py
test/: CMakeLists.txt  main.c  metal-test.c  metal-test.h
test/generic/: CMakeLists.txt
test/system/linux/: CMakeLists.txt  condition.c  domain.c  irq.c  mutex.c  shmem.c  threads.c
zephyr/: CMakeLists.txt  README  module.yml
(+91 files in other folders)
